Introduce new utility classes and features for IoT and UI management
- Added `AbstractBlockView` class to serve as a base for block-related UI views, supporting polling, transactional operations, and cleanup processes.
- Introduced `ComputeConsumption`, `RecomputeConsumption`, and `RecomputeStatistics` classes for IoT data management.
- Added `SmoothenInvalidData` and `UploadData` classes for advanced data processing and file handling in IoT contexts.
- Created `ManageJWT` to support secure token management workflows.
- Added `ObjectViewerButton` for object-specific action handling in `ObjectEditor`.
- Introduced `SOClient` for external SO API communication and response handling.
- Other minor enhancements and framework alignment.